# Migratassert

./: .coverage  .gitignore  README.md  flake.nix  pyproject.toml
lib/migratassert/: __init__.py  annotations.py  cli.py  encoding.py  migrate.py  provenance.py  report.py  source.py  statement.py  transform.py
nix/: overlay.nix  shell.nix
tests/: conftest.py  test_annotations.py  test_encoding.py  test_integration.py  test_migrate.py  test_provenance.py  test_sections.py  test_source.py  test_statement.py  test_transform.py
tests/fixtures/: tc3_expected.yaml  v440_full.yaml
