[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "migratassert"
version = "0.1.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["lib"]

[project.scripts]
migratassert-cli = "migratassert.cli:app"
